--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -14,6 +14,7 @@
 	"accommodations.online_asl": "ASL interpretation, online",
 	"accommodations.online_automatedCaptions": "Automated captions, online",
 	"accommodations.online_liveCaptions": "Live captions, online",
+	"accommodations.short": "Accomms.",
 	"auth.confirmPassword": "Confirm password",
 	"auth.email": "Email",
 	"auth.forgotPassword": "Forgot password",
@@ -45,10 +46,11 @@
 	"fit": "Fit",
 	"fit.clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
 	"fit.extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
-	"fit.flag": "Flag displayed",
+	"fit.flag": "Israeli flag displayed",
 	"fit.flag.extended": "Does your congregation display an Israeli flag?",
 	"fit.flag.no": "No, we do not",
 	"fit.flag.note": "If yes, we will note that in the listing of your congregation so that people can make an informed decision about where they attend.",
+	"fit.flag.short": "Isr. flag",
 	"fit.flag.yes": "Yes, but not on the bima",
 	"fit.flag.yesBima": "Yes, on the bima",
 	"fit.multipleClergyMembers": "Multiple members of the clergy team are affiliated with Rabbis for Ceasefire",
