--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -76,5 +76,6 @@
 	"services.inPerson": "In-person",
 	"services.offsite": "Off-site events",
 	"services.onlineOnly": "Online-only",
-	"unspecified": "Unspecified"
+	"unspecified": "Unspecified",
+	"website": "Website"
 }
