--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -15,6 +15,7 @@
 	"accommodations.online_automatedCaptions": "Automated captions, online",
 	"accommodations.online_liveCaptions": "Live captions, online",
 	"accommodations.short": "Accomms.",
+	"addNew": "Add your congregation",
 	"auth.confirmPassword": "Confirm password",
 	"auth.email": "Email",
 	"auth.forgotPassword": "Forgot password",
