--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -16,16 +16,23 @@
 	"accommodations.online_liveCaptions": "Live captions, online",
 	"accommodations.short": "Accomms.",
 	"addNew": "Add your congregation",
+	"auth.admin": "Admin",
 	"auth.confirmPassword": "Confirm password",
 	"auth.email": "Email",
 	"auth.forgotPassword": "Forgot password",
 	"auth.login": "Login",
 	"auth.logout": "Logout",
+	"auth.name": "Name",
 	"auth.oldPassword": "Old password",
 	"auth.password": "Password",
+	"auth.passwordSuccess": "Password updated successfully.",
+	"auth.resetPassword": "Reset password",
 	"auth.signUp": "Sign Up",
+	"auth.signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
 	"auth.unverified": "Unverified",
 	"auth.verified": "Verified",
+	"auth.verified.extended": "Your email address has been verified. You may now log in.",
+	"auth.verifying": "Verifying email address…",
 	"congregation": "Congregation",
 	"congregation.city": "City",
 	"congregation.clergy": "Clergy",
