--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -18,6 +18,7 @@
 	"addNew": "Add your congregation",
 	"auth.admin": "Admin",
 	"auth.confirmPassword": "Confirm password",
+	"auth.continueToLogin": "Continue to login",
 	"auth.email": "Email",
 	"auth.forgotPassword": "Forgot password",
 	"auth.login": "Login",
@@ -27,6 +28,7 @@
 	"auth.password": "Password",
 	"auth.passwordSuccess": "Password updated successfully.",
 	"auth.resetPassword": "Reset password",
+	"auth.resettingPassword": "Resetting password…",
 	"auth.signUp": "Sign Up",
 	"auth.signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
 	"auth.unverified": "Unverified",
@@ -73,6 +75,8 @@
 	"registration.fixedPrice": "Fixed ticket price (per service or for all)",
 	"registration.slidingScale": "Sliding scale",
 	"registration.suggestedDonation": "By suggested donation",
+	"reloadPage": "Reload page",
+	"reset": "Reset",
 	"safety": "Safety",
 	"safety.extended": "For in-person services, please briefly describe COVID safety and masking protocols at your congregation, or link to congregational guidelines.",
 	"safety.maskingRecommended": "Masking recommended",
