--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -1,5 +1,5 @@
 {
-	"accommodations": "Accommodations",
+	"accommodations.accommodations": "Accommodations",
 	"accommodations.ada": "ADA accessibility",
 	"accommodations.cc": "Closed captioning",
 	"accommodations.eva": "EVA transcriptions",
@@ -15,11 +15,9 @@
 	"accommodations.online_automatedCaptions": "Automated captions, online",
 	"accommodations.online_liveCaptions": "Live captions, online",
 	"accommodations.short": "Accomms.",
-	"addNew": "Add your congregation",
 	"auth.admin": "Admin",
 	"auth.confirmPassword": "Confirm password",
 	"auth.continueToLogin": "Continue to login",
-	"auth.email": "Email",
 	"auth.forgotPassword": "Forgot password",
 	"auth.login": "Login",
 	"auth.logout": "Logout",
@@ -32,13 +30,24 @@
 	"auth.signUp": "Sign Up",
 	"auth.signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
 	"auth.unverified": "Unverified",
-	"auth.verified": "Verified",
+	"auth.updateFailure": "Failed to update account.",
+	"auth.updateSuccess": "Account updated successfully.",
 	"auth.verified.extended": "Your email address has been verified. You may now log in.",
+	"auth.verified.verified": "Verified",
 	"auth.verifying": "Verifying email address…",
-	"congregation": "Congregation",
+	"common.email": "Email",
+	"common.other": "Other",
+	"common.reloadPage": "Reload page",
+	"common.reset": "Reset",
+	"common.unspecified": "Unspecified",
+	"common.website": "Website",
+	"congregation.add": "Add congregation",
+	"congregation.addFailure": "Failed to add congregation.",
+	"congregation.addSuccess": "Congregation added successfully.",
 	"congregation.city": "City",
-	"congregation.clergy": "Clergy",
+	"congregation.clergy.clergy": "Clergy",
 	"congregation.clergy.extended": "List the clergy team below that will lead during the Yamim Noraim.",
+	"congregation.congregation": "Congregation",
 	"congregation.contact": "Contact",
 	"congregation.contactEmail": "Contact email",
 	"congregation.contactEmail.extended": "Email address for contact person listed above",
@@ -46,18 +55,23 @@
 	"congregation.contactName.extended": "Name of best contact person for communications from Rabbis for Ceasefire",
 	"congregation.contactUrl": "Contact URL",
 	"congregation.country": "Country",
-	"congregation.flavor": "Flavor",
+	"congregation.delete": "Delete congregation",
+	"congregation.deleteFailure": "Failed to delete congregation.",
+	"congregation.deleteSuccess": "Congregation deleted successfully.",
+	"congregation.editFailure": "Failed to edit congregation.",
+	"congregation.editSuccess": "Congregation edited successfully.",
 	"congregation.flavor.extended": "In 50 words or less, describe the congregation and ritual 'flavor' that guests will experience.",
-	"congregation.name": "Name",
+	"congregation.flavor.flavor": "Flavor",
 	"congregation.name.extended": "Name of Congregation",
-	"congregation.notes": "Notes",
+	"congregation.name.name": "Name",
 	"congregation.notes.extended": "Anything else we should know?",
+	"congregation.notes.notes": "Notes",
 	"congregation.state": "State/Province",
-	"fit": "Fit",
 	"fit.clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
 	"fit.extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
-	"fit.flag": "Israeli flag displayed",
+	"fit.fit": "Fit",
 	"fit.flag.extended": "Does your congregation display an Israeli flag?",
+	"fit.flag.flag": "Israeli flag displayed",
 	"fit.flag.no": "No, we do not",
 	"fit.flag.note": "If yes, we will note that in the listing of your congregation so that people can make an informed decision about where they attend.",
 	"fit.flag.short": "Isr. flag",
@@ -68,26 +82,21 @@
 	"home.author": "Rabbis for Ceasefire",
 	"home.subtitle": "High Holidays 5785",
 	"home.title": "Open Communities Directory",
-	"other": "Other",
-	"register": "Register",
 	"register.extended": "How can someone register for services? Please share a link or contact information below.",
-	"registration": "Registration",
+	"register.register": "Register",
 	"registration.fixedPrice": "Fixed ticket price (per service or for all)",
+	"registration.registration": "Registration",
 	"registration.slidingScale": "Sliding scale",
 	"registration.suggestedDonation": "By suggested donation",
-	"reloadPage": "Reload page",
-	"reset": "Reset",
-	"safety": "Safety",
 	"safety.extended": "For in-person services, please briefly describe COVID safety and masking protocols at your congregation, or link to congregational guidelines.",
 	"safety.maskingRecommended": "Masking recommended",
 	"safety.maskingRequired": "Masking required",
 	"safety.noGuidelines": "No COVID guidelines in place",
-	"services": "Services",
+	"safety.safety": "Safety",
 	"services.extended": "What types of services are non-members invited to join?",
 	"services.hybrid": "Online access to hybrid services",
 	"services.inPerson": "In-person",
 	"services.offsite": "Off-site events",
 	"services.onlineOnly": "Online-only",
-	"unspecified": "Unspecified",
-	"website": "Website"
+	"services.services": "Services"
 }
