--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -36,6 +36,7 @@
 	"auth.verified.verified": "Verified",
 	"auth.verifying": "Verifying email address…",
 	"common.email": "Email",
+	"common.name": "Name",
 	"common.other": "Other",
 	"common.reloadPage": "Reload page",
 	"common.reset": "Reset",
@@ -49,21 +50,21 @@
 	"congregation.clergy.extended": "List the clergy team below that will lead during the Yamim Noraim.",
 	"congregation.congregation": "Congregation",
 	"congregation.contact": "Contact",
-	"congregation.contactEmail": "Contact email",
+	"congregation.contactEmail.contactEmail": "Contact email",
 	"congregation.contactEmail.extended": "Email address for contact person listed above",
-	"congregation.contactName": "Contact name",
+	"congregation.contactName.contactName": "Contact name",
 	"congregation.contactName.extended": "Name of best contact person for communications from Rabbis for Ceasefire",
 	"congregation.contactUrl": "Contact URL",
 	"congregation.country": "Country",
 	"congregation.delete": "Delete congregation",
 	"congregation.deleteFailure": "Failed to delete congregation.",
 	"congregation.deleteSuccess": "Congregation deleted successfully.",
+	"congregation.description": "Description",
 	"congregation.editFailure": "Failed to edit congregation.",
 	"congregation.editSuccess": "Congregation edited successfully.",
 	"congregation.flavor.extended": "In 50 words or less, describe the congregation and ritual 'flavor' that guests will experience.",
 	"congregation.flavor.flavor": "Flavor",
-	"congregation.name.extended": "Name of Congregation",
-	"congregation.name.name": "Name",
+	"congregation.name": "Name of Congregation",
 	"congregation.notes.extended": "Anything else we should know?",
 	"congregation.notes.notes": "Notes",
 	"congregation.state": "State/Province",
@@ -84,6 +85,7 @@
 	"home.title": "Open Communities Directory",
 	"register.extended": "How can someone register for services? Please share a link or contact information below.",
 	"register.register": "Register",
+	"registration.extended": "What kind of registration do you offer to guests?",
 	"registration.fixedPrice": "Fixed ticket price (per service or for all)",
 	"registration.registration": "Registration",
 	"registration.slidingScale": "Sliding scale",
