delete and transfer wip

--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -35,12 +35,23 @@
 	"auth.verified.extended": "Your email address has been verified. You may now log in.",
 	"auth.verified.verified": "Verified",
 	"auth.verifying": "Verifying email address…",
+	"common.cancel": "Cancel",
+	"common.continue": "Continue",
+	"common.delete": "Delete",
+	"common.edit": "Edit",
+	"common.editThing": "Edit {{thing}}",
 	"common.email": "Email",
 	"common.name": "Name",
+	"common.notice": "Notice",
 	"common.other": "Other",
 	"common.reloadPage": "Reload page",
 	"common.reset": "Reset",
+	"common.submit": "Submit",
+	"common.transfer.desc": "Transfer ownership of this congregation to another user.",
+	"common.transfer.transfer": "Transfer",
 	"common.unspecified": "Unspecified",
+	"common.warning": "Are you sure you want to continue?",
+	"common.warningNote": "This action cannot be undone.",
 	"common.website": "Website",
 	"congregation.add": "Add congregation",
 	"congregation.addFailure": "Failed to add congregation.",
@@ -61,6 +72,7 @@
 	"congregation.deleteSuccess": "Congregation deleted successfully.",
 	"congregation.description": "Description",
 	"congregation.editFailure": "Failed to edit congregation.",
+	"congregation.editNotice": "Making edits will delist this congregation until an administrator can approve your changes.",
 	"congregation.editSuccess": "Congregation edited successfully.",
 	"congregation.flavor.extended": "In 50 words or less, describe the congregation and ritual 'flavor' that guests will experience.",
 	"congregation.flavor.flavor": "Flavor",
@@ -68,6 +80,8 @@
 	"congregation.notes.extended": "Anything else we should know?",
 	"congregation.notes.notes": "Notes",
 	"congregation.state": "State/Province",
+	"congregation.transferFailure": "Failed to transfer congregation.",
+	"congregation.transferSuccess": "Congregation transferred successfully.",
 	"fit.clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
 	"fit.extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
 	"fit.fit": "Fit",
