--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -41,10 +41,12 @@
 	"common.edit": "Edit",
 	"common.editThing": "Edit {{thing}}",
 	"common.email": "Email",
+	"common.formErrors": "Check form for errors.",
 	"common.name": "Name",
 	"common.notice": "Notice",
 	"common.other": "Other",
 	"common.reloadPage": "Reload page",
+	"common.required": "Response is required",
 	"common.reset": "Reset",
 	"common.submit": "Submit",
 	"common.transfer.desc": "Transfer ownership of this congregation to another user.",
