--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -41,14 +41,18 @@
 	"common.edit": "Edit",
 	"common.editThing": "Edit {{thing}}",
 	"common.email": "Email",
+	"common.emailOrUrl": "Email or URL",
 	"common.formErrors": "Check form for errors.",
 	"common.name": "Name",
 	"common.notice": "Notice",
 	"common.other": "Other",
+	"common.otherText": "Other text",
 	"common.reloadPage": "Reload page",
 	"common.required": "Response is required",
 	"common.reset": "Reset",
 	"common.submit": "Submit",
+	"common.thingRequired": "{{thing}} is required",
+	"common.token": "Token",
 	"common.transfer.desc": "Transfer ownership of this congregation to another user.",
 	"common.transfer.transfer": "Transfer",
 	"common.unspecified": "Unspecified",
