--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -43,6 +43,7 @@
 	"common.email": "Email",
 	"common.emailOrUrl": "Email or URL",
 	"common.formErrors": "Check form for errors.",
+	"common.invalidUrl": "Invalid URL",
 	"common.name": "Name",
 	"common.notice": "Notice",
 	"common.other": "Other",
