add/edit form stuff

--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -45,9 +45,12 @@
 	"common.formErrors": "Check form for errors.",
 	"common.invalidUrl": "Invalid URL",
 	"common.name": "Name",
+	"common.next": "Next",
 	"common.notice": "Notice",
 	"common.other": "Other",
 	"common.otherText": "Other text",
+	"common.prev": "Prev.",
+	"common.previous": "Previous",
 	"common.reloadPage": "Reload page",
 	"common.required": "Response is required",
 	"common.reset": "Reset",
