--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -66,7 +66,6 @@
 	"congregation.add": "Add congregation",
 	"congregation.addFailure": "Failed to add congregation.",
 	"congregation.addSuccess": "Congregation added successfully.",
-	"congregation.city": "City",
 	"congregation.clergy.clergy": "Clergy",
 	"congregation.clergy.extended": "List the clergy team below that will lead during the Yamim Noraim.",
 	"congregation.congregation": "Congregation",
@@ -76,7 +75,6 @@
 	"congregation.contactName.contactName": "Contact name",
 	"congregation.contactName.extended": "Name of best contact person for communications from Rabbis for Ceasefire",
 	"congregation.contactUrl": "Contact URL",
-	"congregation.country": "Country",
 	"congregation.delete": "Delete congregation",
 	"congregation.deleteFailure": "Failed to delete congregation.",
 	"congregation.deleteSuccess": "Congregation deleted successfully.",
@@ -89,7 +87,6 @@
 	"congregation.name": "Name of Congregation",
 	"congregation.notes.extended": "Anything else we should know?",
 	"congregation.notes.notes": "Notes",
-	"congregation.state": "State/Province",
 	"congregation.transferFailure": "Failed to transfer congregation.",
 	"congregation.transferSuccess": "Congregation transferred successfully.",
 	"fit.clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
@@ -107,6 +104,11 @@
 	"home.author": "Rabbis for Ceasefire",
 	"home.subtitle": "High Holidays 5785",
 	"home.title": "Open Communities Directory",
+	"locale.city": "City",
+	"locale.country": "Country",
+	"locale.latitude": "Latitude",
+	"locale.longitude": "Longitude",
+	"locale.state": "State/Province",
 	"register.extended": "How can someone register for services? Please share a link or contact information below.",
 	"register.register": "Register",
 	"registration.extended": "What kind of registration do you offer to guests?",
