--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -46,6 +46,7 @@
 	"common.invalidUrl": "Invalid URL",
 	"common.name": "Name",
 	"common.next": "Next",
+	"common.nothingFound": "Nothing found",
 	"common.notice": "Notice",
 	"common.other": "Other",
 	"common.otherText": "Other text",
@@ -54,6 +55,7 @@
 	"common.reloadPage": "Reload page",
 	"common.required": "Response is required",
 	"common.reset": "Reset",
+	"common.selectThing": "Select {{thing}}…",
 	"common.submit": "Submit",
 	"common.thingRequired": "{{thing}} is required",
 	"common.token": "Token",
