--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -58,6 +58,7 @@
 	"common.selectThing": "Select {{thing}}…",
 	"common.submit": "Submit",
 	"common.thingRequired": "{{thing}} is required",
+	"common.title": "Open Communities Directory",
 	"common.token": "Token",
 	"common.transfer.desc": "Transfer ownership of this congregation to another user.",
 	"common.transfer.transfer": "Transfer",
@@ -81,6 +82,7 @@
 	"congregation.deleteFailure": "Failed to delete congregation.",
 	"congregation.deleteSuccess": "Congregation deleted successfully.",
 	"congregation.description": "Description",
+	"congregation.edit": "Edit congregation",
 	"congregation.editFailure": "Failed to edit congregation.",
 	"congregation.editNotice": "Making edits will delist this congregation until an administrator can approve your changes.",
 	"congregation.editSuccess": "Congregation edited successfully.",
