--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -29,12 +29,14 @@
 	"auth.resettingPassword": "Resetting password…",
 	"auth.signUp": "Sign Up",
 	"auth.signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
+	"auth.signupInfo": "Create an account to add and manage your congregation's info.",
 	"auth.unverified": "Unverified",
 	"auth.updateFailure": "Failed to update account.",
 	"auth.updateSuccess": "Account updated successfully.",
 	"auth.verified.extended": "Your email address has been verified. You may now log in.",
 	"auth.verified.verified": "Verified",
 	"auth.verifying": "Verifying email address…",
+	"common.admin": "Admin",
 	"common.cancel": "Cancel",
 	"common.continue": "Continue",
 	"common.delete": "Delete",
@@ -42,6 +44,8 @@
 	"common.editThing": "Edit {{thing}}",
 	"common.email": "Email",
 	"common.emailOrUrl": "Email or URL",
+	"common.filter": "Filter",
+	"common.filterBy": "Filter by",
 	"common.formErrors": "Check form for errors.",
 	"common.invalidUrl": "Invalid URL",
 	"common.name": "Name",
@@ -63,6 +67,8 @@
 	"common.token": "Token",
 	"common.transfer.desc": "Transfer ownership of this congregation to another user.",
 	"common.transfer.transfer": "Transfer",
+	"common.unapproved": "Unapproved",
+	"common.unclaimed": "Unclaimed",
 	"common.unspecified": "Unspecified",
 	"common.warning": "Are you sure you want to continue?",
 	"common.warningNote": "This action cannot be undone.",
