--- a/src/lib/i18n/en/base.json
+++ b/src/lib/i18n/en/base.json
@@ -48,6 +48,7 @@
 	"common.filterBy": "Filter by",
 	"common.formErrors": "Check form for errors.",
 	"common.invalidUrl": "Invalid URL",
+	"common.location": "Location",
 	"common.name": "Name",
 	"common.next": "Next",
 	"common.nothingFound": "Nothing found",
