--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -3,6 +3,7 @@
 	"addCongregation": "Add congregation",
 	"addFailure": "Failed to add congregation.",
 	"addSuccess": "Congregation added successfully.",
+	"approved": "Approved",
 	"clergy.clergy": "Clergy",
 	"clergy.extended": "List the clergy team below that will lead during the Yamim Noraim.",
 	"congregation": "Congregation",
