--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -4,7 +4,7 @@
 	"continue": "Continue",
 	"delete": "Delete",
 	"edit": "Edit",
-	"editThing": "Edit {{thing}}",
+	"editThing": "Edit ‘{{thing}}’",
 	"email": "Email",
 	"emailOrUrl": "Email or URL",
 	"filter": "Filter",
