--- a/src/lib/i18n/en/location.json
+++ b/src/lib/i18n/en/location.json
@@ -1,7 +1,9 @@
 {
 	"city": "City",
 	"country": "Country",
+	"countryCode": "Country Code",
 	"latitude": "Latitude",
 	"longitude": "Longitude",
-	"state": "State/Province"
+	"state": "State/Province",
+	"stateCode": "State/Province Code"
 }
