--- a/src/lib/i18n/en/auth.json
+++ b/src/lib/i18n/en/auth.json
@@ -8,6 +8,7 @@
 	"name": "Name",
 	"oldPassword": "Old password",
 	"password": "Password",
+	"passwordMismatch": "Passwords do not match.",
 	"passwordSuccess": "Password updated successfully.",
 	"resetPassword": "Reset password",
 	"resettingPassword": "Resetting password…",
