--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -1,4 +1,22 @@
 {
+	"accommodations": {
+		"accommodations": "Accommodations",
+		"ada": "ADA accessibility",
+		"cc": "Closed captioning",
+		"eva": "EVA transcriptions",
+		"extended": "Which of the following accommodations will be available?",
+		"hybrid_automatedCaptions": "Automated captions, online access to hybrid services",
+		"hybrid_liveCaptions": "Live captions, online access to hybrid services",
+		"inPerson_adaAll": "ADA-compliant location for all in-person services",
+		"inPerson_adaSome": "ADA-compliant location for some in-person services",
+		"inPerson_asl": "ASL interpretation, in person",
+		"inPerson_eva": "EVA transcriptions, in person",
+		"note": "If participants must request accommodations in advance, please add that detail in the 'Other' field.",
+		"online_asl": "ASL interpretation, online",
+		"online_automatedCaptions": "Automated captions, online",
+		"online_liveCaptions": "Live captions, online",
+		"short": "Accomms."
+	},
 	"add": "Add",
 	"addCongregation": "Add congregation",
 	"addFailure": "Failed to add congregation.",
@@ -22,12 +40,58 @@
 	"editFailure": "Failed to edit congregation.",
 	"editNotice": "Making edits will delist this congregation until an administrator can approve your changes.",
 	"editSuccess": "Congregation edited successfully.",
+	"fit": {
+		"clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
+		"extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
+		"fit": "Fit",
+		"flag.extended": "Does your congregation display an Israeli flag?",
+		"flag.flag": "Israeli flag displayed",
+		"flag.no": "No, we do not",
+		"flag.note": "If yes, we will note that in the listing of your congregation so that people can make an informed decision about where they attend.",
+		"flag.short": "Israeli flag",
+		"flag.yes": "Yes, but not on the bima",
+		"flag.yesBima": "Yes, on the bima",
+		"multipleClergyMembers": "Multiple members of the clergy team are affiliated with Rabbis for Ceasefire",
+		"publicStatement": "The congregation has made a public statement supporting permanent ceasefire"
+	},
 	"flavor.extended": "In 50 words or less, describe the congregation and ritual 'flavor' that guests will experience.",
 	"flavor.flavor": "Flavor",
+	"location": {
+		"city": "City",
+		"country": "Country",
+		"countryCode": "Country Code",
+		"latitude": "Latitude",
+		"longitude": "Longitude",
+		"state": "State/Province",
+		"stateCode": "State/Province Code"
+	},
 	"name": "Name of Congregation",
 	"notes.extended": "Anything else we should know?",
 	"notes.notes": "Notes",
 	"nothingFound": "No congregations found.",
+	"registration": {
+		"extended": "What kind of registration do you offer to guests?",
+		"fixedPrice": "Fixed ticket price (per service or for all)",
+		"register": "Register",
+		"registration": "Registration",
+		"slidingScale": "Sliding scale",
+		"suggestedDonation": "By suggested donation"
+	},
+	"safety": {
+		"extended": "For in-person services, please briefly describe COVID safety and masking protocols at your congregation, or link to congregational guidelines.",
+		"maskingRecommended": "Masking recommended",
+		"maskingRequired": "Masking required",
+		"noGuidelines": "No COVID guidelines in place",
+		"safety": "Safety"
+	},
+	"services": {
+		"extended": "What types of services are non-members invited to join?",
+		"hybrid": "Online access to hybrid services",
+		"inPerson": "In-person",
+		"offsite": "Off-site events",
+		"onlineOnly": "Online-only",
+		"services": "Services"
+	},
 	"transferFailure": "Failed to transfer congregation.",
 	"transferSuccess": "Congregation transferred successfully."
 }
