--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -19,6 +19,15 @@
 	"filter": "Filter",
 	"filterBy": "Filter by",
 	"formErrors": "Check form for errors.",
+	"home": {
+		"author": "Rabbis for Ceasefire",
+		"ceasefire": "Ceasefire now",
+		"credit": "Site by {{thing}}",
+		"dialogTitle": "A message from Rabbis for Ceasefire",
+		"project": "A project of",
+		"subtitle": "High Holidays 5785",
+		"title": "Open Communities"
+	},
 	"invalidUrl": "Invalid URL",
 	"location": "Location",
 	"name": "Name",
