--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -44,15 +44,15 @@
 		"clergyMember": "A member of the clergy team is affiliated with Rabbis for Ceasefire",
 		"extended": "Why would your congregation be a good fit for Jews in the ceasefire movement? Please share additional reasons in the 'Other' field.",
 		"fit": "Fit",
-		"flag.extended": "Does your congregation display an Israeli flag?",
-		"flag.flag": "Israeli flag displayed",
-		"flag.no": "No, we do not",
-		"flag.note": "If yes, we will note that in the listing of your congregation so that people can make an informed decision about where they attend.",
-		"flag.short": "Israeli flag",
-		"flag.yes": "Yes, but not on the bima",
-		"flag.yesBima": "Yes, on the bima",
-		"multipleClergyMembers": "Multiple members of the clergy team are affiliated with Rabbis for Ceasefire",
-		"publicStatement": "The congregation has made a public statement supporting permanent ceasefire"
+		"flag": {
+			"extended": "Does your congregation display an Israeli flag?",
+			"flag": "Israeli flag displayed",
+			"no": "No, we do not",
+			"note": "If yes, we will note that in the listing of your congregation so that people can make an informed decision about where they attend.",
+			"short": "Israeli flag",
+			"yes": "Yes, but not on the bima",
+			"yesBima": "Yes, on the bima"
+		}
 	},
 	"flavor.extended": "In 50 words or less, describe the congregation and ritual 'flavor' that guests will experience.",
 	"flavor.flavor": "Flavor",
@@ -65,10 +65,12 @@
 		"state": "State/Province",
 		"stateCode": "State/Province Code"
 	},
+	"multipleClergyMembers": "Multiple members of the clergy team are affiliated with Rabbis for Ceasefire",
 	"name": "Name of Congregation",
 	"notes.extended": "Anything else we should know?",
 	"notes.notes": "Notes",
 	"nothingFound": "No congregations found.",
+	"publicStatement": "The congregation has made a public statement supporting permanent ceasefire",
 	"registration": {
 		"extended": "What kind of registration do you offer to guests?",
 		"fixedPrice": "Fixed ticket price (per service or for all)",
