privacy and tos

--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -24,7 +24,7 @@
 		"ceasefire": "Ceasefire now",
 		"credit": "Site by {{thing}}",
 		"dialogTitle": "A message from Rabbis for Ceasefire",
-		"project": "A project of",
+		"project": "An initiative of",
 		"subtitle": "High Holidays 5785",
 		"title": "Open Communities"
 	},
@@ -38,12 +38,14 @@
 	"otherText": "Other text",
 	"prev": "Prev.",
 	"previous": "Previous",
+	"privacyPolicy": "Privacy Policy",
 	"reloadPage": "Reload page",
 	"required": "Response is required",
 	"reset": "Reset",
 	"search": "Search",
 	"selectThing": "Select {{thing}}…",
 	"submit": "Submit",
+	"termsOfService": "Terms of Service",
 	"thingRequired": "{{thing}} is required",
 	"title": "Open Communities",
 	"token": "Token",
