--- a/src/lib/i18n/en/auth.json
+++ b/src/lib/i18n/en/auth.json
@@ -2,6 +2,7 @@
 	"admin": "Admin",
 	"confirmPassword": "Confirm password",
 	"continueToLogin": "Continue to login",
+	"emailSent": "Reset email sent. Please check your email for instructions.",
 	"forgotPassword": "Forgot password",
 	"login": "Login",
 	"logout": "Logout",
@@ -10,8 +11,10 @@
 	"password": "Password",
 	"passwordMismatch": "Passwords do not match.",
 	"passwordSuccess": "Password updated successfully.",
+	"resetNotice": "Enter your email address and if it exists in our system, we'll send you a link to reset your password.",
 	"resetPassword": "Reset password",
 	"resettingPassword": "Resetting password…",
+	"sendResetEmail": "Send reset email",
 	"signUp": "Sign Up",
 	"signUpInfo": "Create an account to add and manage your congregation's info.",
 	"signUpSuccess": "Sign up successful. Please check your email for verification instructions.",
