--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -24,7 +24,7 @@
 	"approved": "Approved",
 	"clergy": {
 		"clergy": "Clergy",
-		"extended": "List the clerg`y team below that will lead during the Yamim Noraim."
+		"extended": "List the clergy team below that will lead during the Yamim Noraim."
 	},
 	"congregation": "Congregation",
 	"contact": "Contact",
