--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -94,6 +94,7 @@
 		"maskingRecommended": "Masking recommended",
 		"maskingRequired": "Masking required",
 		"noGuidelines": "No COVID guidelines in place",
+		"notApplicable": "Not applicable, online-only",
 		"safety": "Safety"
 	},
 	"services": {
