--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -50,7 +50,9 @@
 	"reset": "Reset",
 	"search": "Search",
 	"selectThing": "Select {{thing}}…",
+	"submission": "Submission",
 	"submit": "Submit",
+	"success": "Your {{thing}} was successful",
 	"termsOfService": "Terms of Service",
 	"thingRequired": "{{thing}} is required",
 	"title": "Open Communities",
