better mobile view

--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -36,6 +36,7 @@
 	},
 	"invalidUrl": "Invalid URL",
 	"location": "Location",
+	"menu": "Menu",
 	"name": "Name",
 	"next": "Next",
 	"nothingFound": "Nothing found",
