--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -26,7 +26,7 @@
 	"formErrors": "Check form for errors.",
 	"home": {
 		"author": "Rabbis for Ceasefire",
-		"blurb": "Find an inclusive Jewish community to celebrate the High Holidays with.",
+		"blurb": "Find an inclusive pro-ceasefire Jewish community to celebrate the High Holidays with.",
 		"ceasefire": "Ceasefire now",
 		"credit": "Site by {{thing}}",
 		"dialogTitle": "A message from Rabbis for Ceasefire",
