--- a/src/lib/i18n/en/auth.json
+++ b/src/lib/i18n/en/auth.json
@@ -23,5 +23,7 @@
 	"updateSuccess": "Account updated successfully.",
 	"verified.extended": "Your email address has been verified. You may now log in.",
 	"verified.verified": "Verified",
+	"verifyEmail": "Verify email",
+	"verifyFailure": "Verification token has already been used or has expired.",
 	"verifying": "Verifying email address…"
 }
