update pending search

--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -43,6 +43,7 @@
 	"notice": "Notice",
 	"other": "Other",
 	"otherText": "Other text",
+	"pending": "Pending approval",
 	"prev": "Prev.",
 	"previous": "Previous",
 	"privacyPolicy": "Privacy Policy",
