--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -2,6 +2,7 @@
 	"accommodations": {
 		"accommodations": "Accommodations",
 		"ada": "ADA accessibility",
+		"asl": "ASL interpretation",
 		"cc": "Closed captioning",
 		"eva": "EVA transcriptions",
 		"extended": "Which of the following accommodations will be available?",
@@ -98,6 +99,7 @@
 		"maskingRequired": "Masking required",
 		"noGuidelines": "No COVID guidelines in place",
 		"notApplicable": "Not applicable, online-only",
+		"other": "Other COVID policy",
 		"safety": "Safety"
 	},
 	"services": {
