--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -91,7 +91,7 @@
 		"register": "Register",
 		"registration": "Registration",
 		"slidingScale": "Sliding scale",
-		"suggestedDonation": "By suggested donation"
+		"suggestedDonation": "Suggested donation"
 	},
 	"safety": {
 		"extended": "For in-person services, please briefly describe COVID safety and masking protocols at your congregation, or link to congregational guidelines.",
